syntax = "proto3";

package io.vertx.tests.protobuf.datatypes;

option java_package = "io.vertx.tests.protobuf.datatypes";
option java_outer_classname = "DataTypesProto";

message DataTypes {
  string string = 1;
  bytes bytes = 2;
  float _float = 3;
  double _double = 4;
  int32 int32 = 5;
  int64 int64 = 6;
  uint32 uint32 = 7;
  uint64 uint64 = 8;
  sint32 sint32 = 9;
  sint64 sint64 = 10;
  fixed32 fixed32 = 11;
  fixed64 fixed64 = 12;
  sfixed32 sfixed32 = 13;
  sfixed64 sfixed64 = 14;
}
